@@ -207,7 +207,7 @@ form.classic {
         }
     }
     .input-field.inline {
-        display: inline-block; vertical-align: top;
+        display: inline-block; margin-right: 0.5rem; vertical-align: top;
     }
     .input-field.hide {
         display: none;
